--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -23,7 +23,9 @@ jobs:
       - name: create-virtualenv
         run: uv python install 3.12 && uv venv -p 3.12 --seed
       - name: activate-virtualenv
-        run: . .venv/bin/activate
+        run: |
+          . .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
       - name: install-reqs
         run: uv pip install -r requirements.txt
       - name: generate-data
