--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -25,7 +25,7 @@ jobs:
       - name: activate-virtualenv
         run: |
           . .venv/bin/activate
-          echo PATH=$PATH >> $GITHUB_ENV
+          echo "PATH=$PATH" >> "$GITHUB_ENV"
       - name: install-reqs
         run: uv pip install -r requirements.txt
       - name: generate-data
