--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install uv 
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
       - name: create-virtualenv
-        run: uv python install 3.12 && uv venv -p 3.12 --seed
+        run: uv venv -p 3.12 --seed
       - name: install-reqs
         run: |
           . .venv/bin/activate
