ci: run test for the tpch queries

--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -33,4 +33,4 @@ jobs:
       - name: validate-queries
         run: |
           . .venv/bin/activate
-          python -m execute.q1
+          python -m unittest discover -s 'tests'
