--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -20,17 +20,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install uv 
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
-      - name: create-virtualenv
-        run: uv venv -p 3.12 --seed
       - name: install-reqs
-        run: |
-          . .venv/bin/activate
-          uv pip install -r requirements.txt
+        run: uv pip install -r requirements.txt
       - name: generate-data
-        run: |
-          . .venv/bin/activate
-          python generate_data.py
+        run: python generate_data.py
       - name: validate-queries
-        run: |
-          . .venv/bin/activate
-          python -m unittest discover -s 'tests'
+        run: python -m unittest discover -s 'tests'
