--- a/.github/workflows/check_queries.yml
+++ b/.github/workflows/check_queries.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install uv 
         run: curl -LsSf https://astral.sh/uv/install.sh | sh
       - name: install-reqs
-        run: uv pip install -r requirements.txt
+        run: uv pip install -r requirements.txt --system
       - name: generate-data
         run: python generate_data.py
       - name: validate-queries
